~ downgraded to java 11 in order to make it more reusable for downstream modules