@@ -42,21 +42,21 @@
     <developer>
       <id>costamojan</id>
       <name>Daniel Kasmeroglu</name>
-      <email>daniel.kasmeroglu@kasisoft.net</email>
+      <email>daniel.kasmeroglu@kasisoft.com</email>
     </developer>
   </developers>
   
   <properties>
   
-    <java.version>14</java.version>
+    <java.version>11</java.version>
   
     <!-- versioning: dependencies -->
     <h2.version>1.4.192</h2.version>
     <hamcrest.version>1.3</hamcrest.version>
     <jakarta.validation-api.version>2.0.2</jakarta.validation-api.version>
     <log4j.version>2.13.3</log4j.version>
-    <lombok.version>1.18.12</lombok.version>
-    <mapstruct-processor.version>1.3.0.Final</mapstruct-processor.version>
+    <lombok.version>1.18.16</lombok.version>
+    <mapstruct-processor.version>1.4.1.Final</mapstruct-processor.version>
     <testng.version>7.3.0</testng.version>
     
     <!-- versioning: plugins -->
@@ -235,10 +235,6 @@
           <version>${maven-compiler-plugin.version}</version>
           <configuration>
             <release>${java.version}</release>
-            <compilerArgs>
-              <arg>--enable-preview</arg>
-            </compilerArgs>
-            <forceJavacCompilerUse>true</forceJavacCompilerUse>
             <parameters>true</parameters>
             <annotationProcessorPaths>
               <annotationProcessorPath>
@@ -273,7 +269,7 @@
           <artifactId>maven-surefire-plugin</artifactId>
           <version>${maven-surefire-plugin.version}</version>
           <configuration>
-            <argLine>--enable-preview -Duser.country=DE -Duser.language=de</argLine>
+            <argLine>-Duser.country=DE -Duser.language=de</argLine>
             <excludes>
               <exclude>com/kasisoft/libs/common/graphics/**</exclude>
             </excludes>
@@ -286,7 +282,7 @@
     <plugins>
     
       <plugin> 
-        <groupId>org.apache.felix</groupId> 
+        <groupId>org.apache.felix</groupId>
         <artifactId>maven-bundle-plugin</artifactId>
       </plugin> 
       
@@ -310,6 +306,7 @@
       </activation>
       <build>
         <plugins>
+        
           <plugin>
             <groupId>org.sonatype.plugins</groupId>
             <artifactId>nexus-staging-maven-plugin</artifactId>
@@ -321,6 +318,7 @@
               <autoReleaseAfterClose>true</autoReleaseAfterClose>
             </configuration>
           </plugin>
+          
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-release-plugin</artifactId>
@@ -330,6 +328,7 @@
               <mavenExecutorId>forked-path</mavenExecutorId>
             </configuration>
           </plugin>
+          
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-gpg-plugin</artifactId>
@@ -344,6 +343,7 @@
               </execution>
             </executions>
           </plugin>
+          
         </plugins>
       </build>
     </profile>
